# Zombie-game

./: .gitignore  BUILDOUT.md  README.md  _scratch_bloom_bench.py  aphelion.spec  pyproject.toml
aphelion/: __init__.py  main.py
aphelion/content/: loader.py  schema.py  validate.py
aphelion/core/: clock.py  ecs.py  events.py  math2d.py  rng.py  units.py
aphelion/game/: __init__.py  acts.py  alerts.py  basebuild.py  campaign.py  countdown.py  crew.py  eva.py  finance.py  fleet.py  motorpool.py  sealife.py  sectors.py  shipboard.py  sites.py  tileworld.py
aphelion/render/: base_art.py  body_art.py  camera.py  draw_conics.py  eva_art.py  glpost.py  interior_art.py  launch_art.py  marine_art.py  part_art.py  postfx.py  surface_art.py  tile_art.py  vehicle_art.py  vessel_art.py
aphelion/save/: campaign.py  serialize.py
aphelion/sim/: comms.py  economy.py  power.py  research.py
aphelion/tests/: test_acts.py  test_alerts.py  test_ascent_live.py  test_atmosphere.py  test_autostage.py  (+79 more)
design/: 01-orbital-mechanics.md  02-propulsion.md  03-solar-system.md  04-resources-isru.md  05-industry-logistics.md  06-ships-stations.md  07-bases-habitats.md  08-life-support-crew.md  09-power-thermal.md  10-vehicles.md  11-research-tech.md  12-gameplay-economy-ui.md  13-architecture.md  90-14-visual-direction-rendering.md  91-15-audio-direction.md  92-16-communications-networks.md  ART-DIRECTION.md  DECISIONS.md  README.md
shots/: audit_index.py
tools/: diag_ascent.py  diag_phase0.py  gen_bodies.py  gen_golden.py  gen_parts.py  gen_parts2.py  gen_system.py  gen_tech.py
(+754 files in other folders)
