[project]
name = "aphelion"
version = "0.0.1"
description = "APHELION — hard-realism 2D space survival/engineering sim. Design bible: design/"
requires-python = ">=3.12"
dependencies = [
    "pygame-ce>=2.5",
    "numpy>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["aphelion/tests"]
